(fixes #33) adding an aside button allowing aside menu to collapse (#43)

--- a/front/src/main/scss/main.scss
+++ b/front/src/main/scss/main.scss
@@ -70,20 +70,14 @@
 }
 
 .input-group {
-  width: 106.1rem;
-  float: right;
-  padding-right: 1rem;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
+ float: right;
+ padding-right: 0.3rem;
+ padding-bottom: 1rem;
+ padding-top: 1rem;
 }
 
-.input-group-btn {
-}
-
-.form-control {
-}
-
-.panel-heading {
+.inputFieldCrea {
+  width: 95rem;
 }
 
 .btn-danger {
@@ -99,8 +93,6 @@
   margin-inline-end: auto;
   margin-right: 1rem;
 }
-
-
 
 .plus:hover {
   text-decoration:none;
@@ -119,7 +111,7 @@
 
 [contenteditable=true]:empty:before {
   content: attr(placeholder);
-  
+
 }
 .execute {
   margin-top:-3.2rem;
@@ -138,38 +130,36 @@
 }
 
 .select {
-
   margin-top: 1.8rem;
   padding-left: 1rem;
 }
 
 .coll {
-  margin-top:3.5rem;
-  float:left;
-  display:table-cell;
-  vertical-align:middle;
-  width:2rem;
+ margin-top: 5.35rem;
+ float: left;
+ margin-right: 3rem;
+ margin-left: 0.6rem;
 }
+
 .coll button {
-  display:table;
-  text-indent:1em;
-  white-space:nowrap;
-  transform:rotate(90deg) translate( -50%,0);
-  transform-origin:0.6em center;
-}
-.collapse1 {
-  display:none;
+  width: 2rem;
+  height: 3rem;
+  padding-bottom: 0.2rem;
+  text-indent: -0.5rem;
 }
 
-#sideButton {
-  clear:none;
-  display:block;
-}
-
-.typeSelect{
+.typeSelect {
   background-color: transparent;
-  heigth:16px;
 }
-.divselector{
-    display:inline-block;
+
+.divselector {
+  display:inline-block;
+}
+
+.glyphicon-option-vertical {
+  padding-bottom:0.5rem;
+}
+
+.btnS{
+  padding-bottom: 0.56rem;
 }
